--- a/css/style.css
+++ b/css/style.css
@@ -291,9 +291,10 @@ span {
 }
 
 .portfolio-box img {
-    width: 100%;
-    height: 320px;
-    object-fit: cover;
+    max-width: 35Opx;
+    height: 250px;
+    object-fit: contain;
+    object-position: left top;
     box-shadow: 0 0 1rem var(--bg-color);
     border-radius: 2rem;
     transition: .5s ease;
